--- a/main.css
+++ b/main.css
@@ -16,7 +16,7 @@ input {
 }
 
 h1 {
-  color: #525454;
+  color: #fff;
   font-size: 22px;
   margin: 0 0 10px 0;
   text-align: center;
@@ -28,20 +28,64 @@ h1 {
 }
 
 #map {
-  bottom:0px;
-  height: 100%;
-  left: 362px;
   position: absolute;
-  right: 0px;
+  height: 100%;
+  left: 5px;
+  right: 0;
+  bottom: 0;
 }
 
-.options-box {
-  background: #fff;
-  border: 1px solid #999;
-  border-radius: 3px;
+.sidenav {
   height: 100%;
-  line-height: 35px;
-  padding: 10px 10px 30px 10px;
-  text-align: left;
-  width: 340px;
+  width: 0;
+  position: fixed;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+  color: #555;
+  background-color: #a2daf2;
+}
+
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #fff;
+  display: block;
+  transition: 0.3s;
+}
+
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+  cursor: pointer;
+}
+
+.openbtn {
+  position: fixed;
+  z-index: 1;
+  top: 10px;
+  left: 10px;
+  background-color: #fff;
+  font-size: 1.2rem;
+  padding: .5em;
+  cursor: pointer;
+}
+
+.show {
+  width: 250px;
+}
+
+.hide {
+  width: 0;
+}
+
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
 }
